# develop-a-habit

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: AI_FUNCTIONAL_SPEC_APPEND_ONLY.md  COMMITS_LOG.md  PRODUCT_SPEC_APPEND_ONLY.md
docs/bot_docs/: 01_overview.md  02_value.md  03_personas.md  04_key_scenarios.md  05_navigation_map.md  06_quick_start.md  07_first_day.md  08_habit_types.md  09_positive_logic.md  10_negative_logic.md  11_all_day_slot.md  12_day_parts.md  13_schedule_daily.md  14_schedule_every_other.md  15_schedule_weekdays.md  16_day_off_concept.md  17_optional_done.md  18_over_completion.md  19_plan_completion.md  20_button_behavior.md  21_toggle_checkin.md  22_auto_period.md  23_show_all.md  24_sorting_rules.md  25_create_flow.md  26_edit_flow.md  27_delete_flow.md  28_goal_default.md  29_goal_extend.md  30_goal_reset.md  31_streak_definition.md  32_adherence_days.md  33_weekly_stats.md  34_monthly_stats.md  35_yearly_stats.md  36_per_habit_stats.md  37_sport_habits.md  38_linear_progression.md  39_progression_toggle.md  40_sport_presets.md  (+40 more)
docs/git_value_series/: 001_habit_micro_steps.md  002_visible_progress.md  003_calendar_reflection.md  004_positive_negative_balance.md  005_slot_routine_design.md  (+45 more)
migrations/: env.py
scripts/: check_append_only_docs.py  merge_duplicate_habits.py
tests/: test_habit_dedup.py  test_habit_progress.py  test_merge_duplicates_service.py  test_metrics_service.py  test_schedule_engine.py  test_sport_progress.py  test_time_slots.py  test_weekly_digest_schedule.py
(+48 files in other folders)
