[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "develop-a-habit"
version = "0.1.0"
description = "Telegram habit tracker with diary, search, export, and statistics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Develop A Habit" }
]
dependencies = [
  "aiogram>=3.15.0,<4.0.0",
  "SQLAlchemy>=2.0.36,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "jinja2>=3.1.4,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.7.2,<1.0.0"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
